# todo-cli

./: Cargo.toml  LICENSE  README.md  Settings.toml  release.sh  todo-cli
src/: command.rs  database.rs  handlers.rs  main.rs  operations.rs  settings.rs  utils.rs
src/server/: entry.rs  mod.rs
src/shell/: entry.rs  handlers.rs  mod.rs
