[package]
name = "todo-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.11", features = ["derive"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
chrono = "0.4.38"
colored = "2.0"
figlet-rs = "0.1.5"
termion = "4.0.2"
prettytable-rs = "0.10.0"
unicode-width = "0.1.13"
